# Sum_check_protocol

./: Cargo.toml
src/: main.rs  prover.rs  verifier.rs
