[package]
name = "SumCheck"
version = "0.1.0"
author = "Olimpia Ticlos <olimpiaticlos@yahoo.com>"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ark-ff = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-poly = {version= "0.4.0", default-features = false}
